--- a/server.cfg
+++ b/server.cfg
@@ -81,6 +81,7 @@ ensure [standalone]
 ensure [voice]
 ensure [assets]
 ensure [custom]
+ensure [vehicles]
 
 ## Permissions ##
 add_principal identifier.fivem:1673006 group.admin #str1de
