--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@
 /db
 /db/default
 /db
+db/default/000106.log
+db/default/000106.log
+db/default/000106.log
+db/default/000106.log
+db/default/CURRENT
+db/default/IDENTITY
+db/default/LOG
+db/default/LOG.old.1752347254707909
+db/default/LOG.old.1752347365877937
